fix firefox title spacing

--- a/style.css
+++ b/style.css
@@ -81,10 +81,10 @@ h1 {
   }
   h1.heading {
     padding: 20px 10px 23px 18px;
-    width: 400px;
-    letter-spacing: 0.09em;
+    width: 420px;
+    letter-spacing: 0.08em;
     font-family: 'NobileRegular';
-    font-size:25px;
+    font-size:24px;
     font-variant:small-caps;
     }
     h1.heading a {
